# ouro

V1/: .gitignore  Makefile  README.md
V1/.github/workflows/: ci.yml
V1/bootstrap/: Makefile  pyproject.toml
V1/bootstrap/src/: __init__.py  codegen.py  diagnostics.py  lexer.py  loader.py  main.py  nodes.py  parser.py  resolver.py  tokens.py  typechecker.py
V1/bootstrap/test/: conftest.py  test_codegen.py  test_diagnostics.py  test_e2e.py  test_lexer.py  test_loader.py  test_ouro.py  test_parser.py  test_resolver.py  test_typechecker.py
V1/docs/: README.md  codegen.md  lexer.md  nodes.md  parser.md  resolver.md  tokens.md  typechecker.md
V1/docs/spec/: README.md  control-flow.md  conventions.md  declarations.md  duck-typing.md  errors.md  inline-asm.md  memory.md  runtime.md  stack-and-arc.md  stdlib.md  syntax.md  types.md
V1/editor/vscode/: README.md  language-configuration.json  package.json
V1/examples/: 01_hello.ou  02_hello_world.ou  03_arithmetic.ou  04_control_flow.ou  05_factorial.ou  06_fizzbuzz.ou  07_point.ou  08_counter.ou  09_arc_drop.ou  10_tour.ou  README.md
V1/src/: README.md
V1/std/: assert.ou  bytes.ou  diag.ou  fs.ou  io.ou  map.ou  math.ou  parse.ou  string.ou  test.ou  value.ou  vec.ou
V1/std/runtime/: arc.ou  entry.ou  mem.ou  printf.ou  syscalls.ou
V1/test/asm/: asm_test.ou
V1/test/basic/: basic_test.ou
V1/test/bindings/: bindings_test.ou
V1/test/control_flow/: control_flow_test.ou
V1/test/functions/: functions_test.ou
V1/test/generics/: box_with_drop.ou  generics_test.ou  holder_managed.ou  (+1 more)
V1/test/io/: println.ou  (+6 more)
(+61 files in other folders)
