[project]
name = "ouro"
version = "0.1.0"
description = "ouro (ouroboros) is a compiled system programming language with a python like syntax and features. "
readme = "README.md"
requires-python = ">=3.14"
dependencies = []

[dependency-groups]
dev = ["pytest>=8", "ruff>=0.9", "ty>=0.0.0a1"]

[tool.pytest.ini_options]
testpaths = ["test"]
pythonpath = ["."]
